Changed note textarea from 10rem to 9rem to prevent keypad from covering save button.

--- a/front/notes/note.css
+++ b/front/notes/note.css
@@ -28,7 +28,7 @@ hr {
 }
 #note-text {
     width: 100%;
-    height: 10rem;
+    height: 9rem;
     font-size: 1.5rem;
 }
 #save {
